Bugzilla bug 233320: pk11_OpenKeyDB should not return SECFailure (not a CK_RV value).  Removed two unnecessary assignment statements.  r=relyea.